removed assets folder and updated link paths.

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -2,7 +2,7 @@
 # Footer Styles
 --------------------------------------------------------------*/
 .site-footer {
-    background: url('../../assets/images/dark-wood.png');
+    background: url('../../images/dark-wood.png');
     color: white;
 
     & .footer__contact, 
