--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -10,7 +10,7 @@
 
 /* - Hero Banner - */
 .front-page-hero {
-	background: url("//localhost:3000/inhabitent/wp-content/themes/inhabitent/assets/images/home-hero.jpg") no-repeat center;
+	background: url("//localhost:3000/inhabitent/wp-content/themes/inhabitent/images/home-hero.jpg") no-repeat center;
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -228,6 +228,48 @@ body.archive.tax-product-type {
 			text-align: center;
 			font-size: 1rem;
 			line-height: 1.75rem;
+		}
+	}
+}
+
+/* ------- Find Us Page Styles ------- */
+body.page-template-default {
+	h1, h2 {
+		font-family: 'Novecento';
+		text-transform: uppercase;
+		line-height: 1.25;
+	}
+
+	h1 {
+		font-size: 2.4rem;
+	}
+
+	h2 {
+		font-size: 1.75rem;
+	}
+	.entry-readmore.link-button {
+		width: 165px;
+	}
+
+	div[role='form'] {
+		font-family: 'Novecento';
+		text-transform: uppercase;
+
+		span.required-field {
+			color: red;
+			font-size: $base__space-unit / 2;
+			position: absolute;
+		}
+
+		input, textarea {
+			background: $color__input-bg;
+			border-radius: 0;
+			margin-top: $base__space-unit / 2;
+		}
+
+		p input.wpcf7-form-control.wpcf7-submit {
+			@extend .link-button__color-green;
+			border: none !important;
 		}
 	}
 }
