--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -526,6 +526,8 @@ a {
     padding-left: 0;
     margin-right: 1.5rem; }
     .main-navigation ul ul {
+      display: -ms-flexbox;
+      display: flex;
       box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
       position: absolute;
       top: 1.5rem;
@@ -543,7 +545,6 @@ a {
     .main-navigation ul li.focus > ul {
       left: auto; }
   .main-navigation li {
-    float: right;
     position: relative;
     margin: 0.5rem 0 0.5rem 1.5rem; }
   .main-navigation a {
@@ -555,13 +556,15 @@ a {
 /* Small menu. */
 .menu-toggle,
 .main-navigation.toggled ul {
-  display: block; }
+  display: -ms-flexbox;
+  display: flex; }
 
 @media screen and (min-width: 768px) {
   .menu-toggle {
     display: none; }
   .main-navigation ul {
-    display: block; } }
+    display: -ms-flexbox;
+    display: flex; } }
 
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
@@ -572,13 +575,11 @@ a {
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
-  float: left;
   width: 50%; }
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
-  float: right;
   text-align: right;
   width: 50%; }
 
