--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -29,6 +29,7 @@ $color__border-abbr: #666;
 $color__link: #248A83;
 $color__link-visited: #248A83;
 $color__link-hover: #2f1339;
+$color__title-link-hover: #F0E4D1;
 
 $color__button-green-hover: #19625D;
 
