--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -117,6 +117,138 @@ body.home.page-template-default {
 	}
 }
 
+/* ------- Latest Adventures ------- */
+.latest-adventures-container {
+	width: $content__size-width;
+	margin: 0 auto;
+	width: 1120px;
+	border-bottom: $base__space-unit solid white;
+	
+	.latest-adventures {
+		display: grid;
+		height: 550px;
+		grid-template: 	"left obj1 obj1" 1fr
+		"left obj2 obj3" 1fr
+		/ 49% 24.5% 24.5%;
+		
+		.latest-adventures-block-item {
+			overflow: hidden;
+			max-height: 275px;
+			height: 100%;
+			position: relative;
+			border-bottom: $base__space-unit solid white;
+						
+			.latest-adventures-wrapper {
+
+				.info-container {
+					margin: $base__space-unit;
+					position: relative;
+				}
+				
+				img {
+					position: absolute;
+					max-width: none;
+					max-height: 400px;
+					transform: translate(-50%, -50%);
+					top: 50%;
+					left: 50%;
+				}
+
+				h3, .entry-readmore {
+					z-index: 2;
+				}
+
+				a {
+                    z-index: 2;
+					text-decoration: none;
+					color: white;
+
+					&:hover {
+                        color: $color__title-link-hover;
+					}
+                }
+
+                h3 {
+                    color: white;
+                    font-weight: 400;
+					letter-spacing: 2px;
+					text-align: left;
+					text-transform: none;
+					font-size: 2.5rem;
+					position: relative;
+					margin: 1.5rem 0;
+				}
+
+				.entry-readmore {
+                    background: none;
+                    border: 1px solid white;
+                    width: 150px;
+					text-align: center;
+					position: absolute;
+					
+					a {
+						color: white;
+					}
+
+                    &:hover {
+                        background: $color__button-green-hover;
+                        border: 1px solid $color__button-green-hover;
+                    }
+				}
+
+				&:after {
+                    content: "";
+                    background: rgba(0,0,0, 0.35);
+                    background-size: cover;
+                    position: absolute;
+                    height: 100%;
+					width: 100%;
+					transform: translate(-50%, -50%);
+					top: 50%;
+					left: 50%;
+				}
+			}
+
+			&:nth-child(4) {
+				grid-area: left;
+				max-height: 550px;
+
+				img {
+					max-height: 550px;
+				}
+			}
+
+			&:nth-child(3) {
+				grid-area: obj1;
+			}
+
+			&:nth-child(2) {
+				grid-area: obj2;
+			}
+
+			&:nth-child(1) {
+				grid-area: obj3;
+			}
+
+			&:nth-child(4),
+			&:nth-child(2) {
+				// margin-right: $base__space-unit;
+				border-right: $base__space-unit solid white;
+			}
+
+			&:nth-child(2),
+			&:nth-child(1) {
+
+				h3 {
+					font-size: 1.5rem;
+				}
+			}
+			
+		}
+	}
+
+}
+
 /* ------- Search Form ------- */
 form[role='search'] {
 	fieldset {
